--- a/AddressManager/AddressManager.csproj
+++ b/AddressManager/AddressManager.csproj
@@ -156,9 +156,6 @@
     <Reference Include="Unity.ServiceLocation, Version=2.1.2.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.5.8.13\lib\net46\Unity.ServiceLocation.dll</HintPath>
     </Reference>
-    <Reference Include="WinformsValidation">
-      <HintPath>..\..\WinformsValidation\WinformsValidation\bin\Debug\WinformsValidation.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddressManagerForm.cs">
@@ -295,6 +292,20 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Case-Parts-APIs\CreateCustomer.API\CreateCustomer.API.csproj">
+      <Project>{71145d0b-996d-47b5-891f-4269fce0245d}</Project>
+      <Name>CreateCustomer.API</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CPUserControls\CPUserControls\CPUserControls.csproj">
+      <Project>{dd27dba7-3b2b-4d04-805c-f288013294d5}</Project>
+      <Name>CPUserControls</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WinformsValidation\WinformsValidation\WinformsValidation.csproj">
+      <Project>{d6acb15e-7a29-46a4-b050-ba71a6ab901f}</Project>
+      <Name>WinformsValidation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
